Fix: Activity Stream - Align pages #1068

--- a/css/leptonChrome.css
+++ b/css/leptonChrome.css
@@ -10598,8 +10598,8 @@
         #navigator-toolbox:is(:hover, :focus-within) #nav-bar:not([customizing]) #urlbar {
           opacity: 1;
         }
-        #navigator-toolbox:is(:hover, :focus-within) #nav-bar:not([customizing]) #urlbar {
-          pointer-events: auto;
+        #navigator-toolbox:not(:hover, :focus-within) #nav-bar:not([customizing]) #urlbar {
+          pointer-events: none;
         }
       }
       @supports -moz-bool-pref("userChrome.tabbar.one_liner") {
@@ -10620,8 +10620,8 @@
             #navigator-toolbox:is(:hover, :focus-within) #nav-bar:not([customizing]) #urlbar {
               opacity: 1;
             }
-            #navigator-toolbox:is(:hover, :focus-within) #nav-bar:not([customizing]) #urlbar {
-              pointer-events: auto;
+            #navigator-toolbox:not(:hover, :focus-within) #nav-bar:not([customizing]) #urlbar {
+              pointer-events: none;
             }
           }
         }
@@ -25704,8 +25704,8 @@
   #navigator-toolbox:is(:hover, :focus-within) #nav-bar:not([customizing]) #urlbar {
     opacity: 1;
   }
-  #navigator-toolbox:is(:hover, :focus-within) #nav-bar:not([customizing]) #urlbar {
-    pointer-events: auto;
+  #navigator-toolbox:not(:hover, :focus-within) #nav-bar:not([customizing]) #urlbar {
+    pointer-events: none;
   }
 }
 @media screen and (-moz-bool-pref: "userChrome.autohide.tabbar") and (-moz-bool-pref: "userChrome.autohide.navbar") and (-moz-bool-pref: "userChrome.autohide.navbar") and (-moz-bool-pref: "userChrome.tabbar.one_liner") and (-moz-bool-pref: "userChrome.tabbar.one_liner.responsive") and (max-width: 1100px),
@@ -25727,8 +25727,8 @@
   #navigator-toolbox:is(:hover, :focus-within) #nav-bar:not([customizing]) #urlbar {
     opacity: 1;
   }
-  #navigator-toolbox:is(:hover, :focus-within) #nav-bar:not([customizing]) #urlbar {
-    pointer-events: auto;
+  #navigator-toolbox:not(:hover, :focus-within) #nav-bar:not([customizing]) #urlbar {
+    pointer-events: none;
   }
 }
 @media (-moz-bool-pref: "userChrome.autohide.tabbar") and (-moz-bool-pref: "userChrome.autohide.navbar"),
